--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,20 @@
     background-color: var(--brand-color);
     border-color: var(--brand-color);
 }
+
+.reg-album-header {
+    margin-top: 60px;
+    margin-bottom: 60px;
+}
+
+.lbl {
+    font-size: larger;
+}
+
+.mt-8 {
+    margin-top: 30px;
+}
+
+.album-unit {
+    margin-bottom: 100px;
+}
