--- a/module/Application/view/application/image/index.phtml
+++ b/module/Application/view/application/image/index.phtml
@@ -5,13 +5,18 @@
 </p>
 
 <p>
-    <a href="<?= $this->url('images', ['action'=>'upload', 'albumId' => $albumId]); ?>"
-       class="btn btn-primary" role="button">Upload More</a>
+    <a href="<?= $this->url('images', ['action' => 'upload', 'albumId' => $albumId]); ?>"
+       class="btn btn-primary" role="button">Добавить фотографию</a>
+</p>
+
+<p>
+    <a href="<?= $this->url('home'); ?>"
+       class="btn btn-primary" role="button">Главная</a>
 </p>
 
 <hr/>
 
-<?php if(count($files)==0): ?>
+<?php if (count($files) == 0): ?>
 
     <p>
         <i>Нет файлов для отображения.</i>
@@ -21,24 +26,38 @@
 
     <div class="row">
         <div class="col-sm-6 col-md-12">
+            <div class="img-thumbnail">
+                <?php foreach ($files as $file): ?>
 
-            <?php foreach($files as $file): ?>
-
-                <div class="img-thumbnail">
-                    <img src="<?= $this->url('images', ['action'=>'file', 'albumId' => $albumId],
-                        ['query'=>['name'=>$file, 'thumbnail'=>true]]); ?>">
+                    <a target="_blank" href=<?= "/uploads/$albumId/$file" ?>>
+                        <img
+                                src='<?= "/uploads/$albumId/min/$file" ?>'
+                                alt="Не найдено"
+                        >
+                    </a>
+<!--                    <a target="_blank" href=-->
+<!--                    --><?//= "/images/file/$albumId?name=$file" ?>
+<!--                    >-->
+<!--                        <img-->
+<!--                                src='-->
+<!--                                --><?//= "/uploads/$albumId/min/$file" ?>
+<!--                                '-->
+<!--                                alt="Не найдено"-->
+<!--                        >-->
+<!--                    </a>-->
 
                     <div class="caption">
                         <h3><?php echo $file; ?></h3>
                         <p>
-                            <a target="_blank" href="<?= $this->url('images', ['action'=>'file', 'albumId' => $albumId],
-                                ['query'=>['name'=>$file]]); ?>"
-                               class="btn btn-default" role="button">Show in Natural Size</a>
+                            <a href="<?= $this->url('deletePhoto', ['albumId' => $albumId],
+                                ['query' => ['photoName' => $file]]); ?>"
+                               class="btn btn-default" role="button">Удалить</a>
                         </p>
                     </div>
-                </div>
 
-            <?php endforeach; ?>
+                <?php endforeach; ?>
+            </div>
+
         </div>
     </div>
 
